# mljar-supervised

./: .gitignore  .travis.yml  CITATION  LICENSE  MANIFEST.in  README.md  newfile  output_test_binary.xlsx  output_test_multi.xlsx  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  testing.py
.github/workflows/: docs.yml  pylint.yml  run-tests.yml  smoke-pypi-install-train.yml  test-contrib-dispatch.yml  test-installation-with-conda.yml  test-installation-with-pip-on-windows.yml
connector/: autoload.py
docs/: README.md  algorithms.md  api.md  contributing.md  faq.md  features.md  mkdocs.yml  tuning.md
docs/docs/: api.md  contributing.md  get_help.md  help.md  index.md  roadmap.md
examples/notebooks/: House price prediction Regression .ipynb  Titanic.ipynb  basic_run.ipynb
examples/scripts/: binary_classifier.py  binary_classifier_Titanic.py  binary_classifier_Titanic_app.py  binary_classifier_adult_fairness.py  binary_classifier_ensemble.py  binary_classifier_marketing.py  regression.py  (+14 more)
supervised/: __init__.py  automl.py  automl.py.925568a44b6f15ddead25128d29f041f.tmp  base_automl.py  config.py  ensemble.py  exceptions.py  iterative_learner_framework.py  jsonable.py  learner_framework.py  learner_framework_factory.py  log.py  metric.py  model_framework.py  newautoml.py
tests/: README.md  conftest.py  run.py  run_all.py  run_ml_tests.py  run_performance_tests.py  run_unit_tests.py  test_automl.py  test_automl_performance.py  test_automl_with_data.py  test_automl_with_multiclass.py  test_iterative_learner_framework.py  test_iterative_learner_framework_with_preprocessing.py  test_metric.py
(+321 files in other folders)
